--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -25,12 +25,10 @@ set -g @themepack 'powerline/double/yellow'
 #bindings
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 bind-key v copy-mode
-bind-key / split-window -h
+bind-key / split-window -hc "#{pane_current_path}"
 bind-key -T prefix h command-prompt -k -p key { list-keys -1N "%%" }
-bind h previous-window
 bind l next-window
 bind c new-window -c "#{pane_current_path}"
-bind p split-window -h -c "#{pane_current_path}"
 
 #run tmp
 run '~/.tmux/plugins/tpm/tpm'
