--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,6 +26,7 @@ set -g @themepack 'powerline/double/yellow'
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
 bind-key v copy-mode
 bind-key / split-window -hc "#{pane_current_path}"
+bind-key % split-window -c "#{pane_current_path}"
 bind-key -T prefix h command-prompt -k -p key { list-keys -1N "%%" }
 bind l next-window
 bind c new-window -c "#{pane_current_path}"
