packer>lazy and hyprland stuff

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -g @plugin 'nordtheme/tmux'
 set -g @plugin 'jimeh/tmux-themepack'
 
 #settings
-set -g status-position top
+set -g status-position bottom
 set -g base-index 1
 setw -g mode-keys vi
 set-option -g default-shell /bin/zsh
@@ -30,6 +30,7 @@ bind-key % split-window -c "#{pane_current_path}"
 bind-key -T prefix h command-prompt -k -p key { list-keys -1N "%%" }
 bind l next-window
 bind c new-window -c "#{pane_current_path}"
+
 
 #run tmp
 run '~/.tmux/plugins/tpm/tpm'
