--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,15 +12,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'nordtheme/tmux'
-set -g @plugin 'jimeh/tmux-themepack'
 
 #settings
 set -g status-position bottom
 set -g base-index 1
 setw -g mode-keys vi
 set-option -g default-shell /bin/zsh
-set -g @themepack 'powerline/double/yellow'
 
 #bindings
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
@@ -31,6 +28,25 @@ bind-key -T prefix h command-prompt -k -p key { list-keys -1N "%%" }
 bind l next-window
 bind c new-window -c "#{pane_current_path}"
 
+# Base configuration
+set -g status on
+set -g status-interval 2
 
-#run tmp
+# Status bar appearance
+set -g status-style bg=default,fg=default
+
+# Left and right status are empty
+set -g status-left ' #[bg=default,fg=white]#[bg=white,fg=#000000] #[bold]#S #[bg=default,fg=white]#[default]'
+set -g status-right ''
+
+# Centered window name
+set -g status-justify centre
+set -g window-status-current-format '#[bg=default,fg=white]#[bg=white,fg=#000000] #[bold]#I:#W #[bg=default,fg=white]#[default]'
+set -g window-status-format '#[bg=default,fg=#444444]#[bg=#444444,fg=white] #[bold]#I:#W #[bg=default,fg=#444444]#[default]'
+
+# Remove any padding around the window name
+set -g status-left-length 0
+set -g status-right-length 0
+
 run '~/.tmux/plugins/tpm/tpm'
+
