--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -48,5 +48,10 @@ set -g window-status-format '#[bg=default,fg=#444444]#[bg=#444444,fg=white] #
 set -g status-left-length 0
 set -g status-right-length 0
 
+setw -g pane-border-status bottom
+
+set-option -g pane-active-border-style fg=white
+set-option -g pane-border-style fg=colour244
+#run
 run '~/.tmux/plugins/tpm/tpm'
 
