--- a/waybar/config
+++ b/waybar/config
@@ -1,22 +1,25 @@
 {
   // sourced from header module //
 
-    "layer": "top",
+  "layer": "top",
     "position": "bottom",
     "mod": "dock",
-    "height": 40,
     "exclusive": true,
-    "passthrough": true,
+    "passthrough": false,
     "gtk-layer-shell": true,
+    "margin-top":0,
+    "margin-bottom":5,
+    "margin-left":10,
+    "margin-right":10,
+    "spacing":5,
 
 
-    "modules-left": ["hyprland/window","temperature","backlight","pulseaudio","battery"],
-    "modules-center": ["hyprland/workspaces"],
-    "modules-right": ["tray","network","clock"],
-
-
+    "modules-right": ["tray","network","temperature","backlight","pulseaudio","battery"],
+    "modules-left": ["clock","hyprland/workspaces"],
+    "modules-center": [],
     "hyprland/window": {
-      "format": "{}"
+      "active": true,
+      "format": "{app_id} {title} {}"
     },
 
     "temperature": {
@@ -107,7 +110,7 @@
 
 
     "clock": {
-      "format": " {:%H:%M}",
+      "format": "{:%H:%M}",
       "on-click": "~/.config/eww/scripts/toggle_control_center.sh"
     },
 
