--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -50,7 +50,10 @@ exec-once = $terminal
 exec-once = waybar & hyprpaper
 exec-once = pipewire
 exec-once = sxhkd &
+exec = gsettings set org.gnome.desktop.interface gtk-theme "YOUR_DARK_GTK3_THEME"   # for GTK3 apps
+exec = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"   # for GTK4 apps
 
+env = QT_QPA_PLATFORMTHEME,qt6ct   # for Qt apps
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -204,16 +207,16 @@ bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = Alt, 1, workspace, 1
-bind = Alt, 2, workspace, 2
-bind = Alt, 3, workspace, 3
-bind = Alt, 4, workspace, 4
-bind = Alt, 5, workspace, 5
-bind = Alt, 6, workspace, 6
-bind = Alt, 7, workspace, 7
-bind = Alt, 8, workspace, 8
-bind = Alt, 9, workspace, 9
-bind = Alt, 0, workspace, 10
+bind = $mainMod, 1, workspace, 1
+bind = $mainMod, 2, workspace, 2
+bind = $mainMod, 3, workspace, 3
+bind = $mainMod, 4, workspace, 4
+bind = $mainMod, 5, workspace, 5
+bind = $mainMod, 6, workspace, 6
+bind = $mainMod, 7, workspace, 7
+bind = $mainMod, 8, workspace, 8
+bind = $mainMod, 9, workspace, 9
+bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
