--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,6 +49,8 @@ set -g status-left-length 0
 set -g status-right-length 0
 
 setw -g pane-border-status bottom
+setw -g pane-border-format ''
+
 
 set-option -g pane-active-border-style fg=white
 set-option -g pane-border-style fg=colour244
