--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMono
+font_family      JetBrainsMono Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
