--- a/waybar/config
+++ b/waybar/config
@@ -27,7 +27,9 @@
       // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
       // "critical-threshold": 80,
       // "format-critical": " {temperatureC}°C",
-      "format": " {temperatureC}°C"
+      "format": " {temperatureC}°C",
+      "tooltip":false,
+
     },
 
     "backlight": {
@@ -79,7 +81,7 @@
 
     "network": {
       "tooltip": true,
-      "format-wifi": "<span foreground='#FF8B49'> {bandwidthDownBytes}</span> <span foreground='#FF6962'> {bandwidthUpBytes}</span>",
+      "format-wifi": " {bandwidthDownBytes}  {bandwidthUpBytes}",
       "format-ethernet": "<span foreground='#FF8B49'> {bandwidthDownBytes}</span> <span foreground='#FF6962'> {bandwidthUpBytes}</span>",
       "tooltip-format": "Network: <big><b>{essid}</b></big>\nSignal strength: <b>{signaldBm}dBm ({signalStrength}%)</b>\nFrequency: <b>{frequency}MHz</b>\nInterface: <b>{ifname}</b>\nIP: <b>{ipaddr}/{cidr}</b>\nGateway: <b>{gwaddr}</b>\nNetmask: <b>{netmask}</b>",
       "format-linked": "󰈀 {ifname} (No IP)",
@@ -92,6 +94,7 @@
 
     "hyprland/workspaces": {
       "disable-scroll": true,
+      "spacing":4,
       "all-outputs": true,
       "on-click": "activate",
       "persistent_workspaces": {
