--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -968,7 +968,7 @@ window_padding_width 10
 #: insensitive, from the set 0-9A-Z\-=[];',./\\`. Specify your
 #: preference as a string of characters.
 
-# confirm_os_window_close -1
+confirm_os_window_close 0
 
 #: Ask for confirmation when closing an OS window or a tab with at
 #: least this number of kitty windows in it by window manager (e.g.
@@ -1181,7 +1181,7 @@ background_opacity 0.8
 #: this option when reloading the config will only work if
 #: dynamic_background_opacity was enabled in the original config.
 
-# background_blur 0
+ background_blur 1
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
@@ -1446,6 +1446,7 @@ background_opacity 0.8
 
 #:     env VAR1=a
 #:     env VAR2=${HOME}/${VAR1}/b
+env ZDOTDIR=${HOME}/.config/zsh
 
 #: The value of VAR2 will be <path to home directory>/a/b.
 
