--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,14 +10,15 @@ bind C-Space send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 #settings
-set -g status-position bottom
+set -g status-position top
 set -g base-index 1
 setw -g mode-keys vi
 set-option -g default-shell /bin/zsh
+set-option -g @yank-to-clipboard "xclip -selection clipboard"  # for xclip and yank
 
 #bindings
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
@@ -27,6 +28,8 @@ bind-key % split-window -c "#{pane_current_path}"
 bind-key -T prefix h command-prompt -k -p key { list-keys -1N "%%" }
 bind l next-window
 bind c new-window -c "#{pane_current_path}"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -selection clipboard' #copy to clipboard
+bind-key -Tcopy-mode-vi 'C-v' send -X rectangle-toggle
 
 # Base configuration
 set -g status on
@@ -48,7 +51,7 @@ set -g window-status-format '#[bg=default,fg=#444444]#[bg=#444444,fg=white] #
 set -g status-left-length 0
 set -g status-right-length 0
 
-setw -g pane-border-status bottom
+setw -g pane-border-status top
 setw -g pane-border-format ''
 
 
