--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMono Nerd Font
+font_family      JetBrainsMono Nerd Font, Vazirmatn
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -27,7 +27,7 @@ bold_italic_font auto
 
 #: Font size (in pts).
 
-# force_ltr no
+force_ltr no
 
 #: kitty does not support BIDI (bidirectional text), however, for RTL
 #: scripts, words are automatically displayed in RTL. That is to say,
@@ -847,7 +847,7 @@ bold_italic_font auto
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-window_padding_width 10
+window_padding_width 1
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -1157,7 +1157,7 @@ background #000000
 
 #: The foreground and background colors.
 
-background_opacity 0.8
+background_opacity 0.6
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1323,7 +1323,7 @@ background_opacity 0.8
 
 #: Advanced {{{
 
-# shell .
+shell zsh
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
