--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMono Nerd Font, Vazirmatn
+font_family      JetBrainsMono Nerd Font, Vazirmatn Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -27,7 +27,7 @@ bold_italic_font auto
 
 #: Font size (in pts).
 
-force_ltr no
+# force_ltr no
 
 #: kitty does not support BIDI (bidirectional text), however, for RTL
 #: scripts, words are automatically displayed in RTL. That is to say,
@@ -2233,15 +2233,14 @@ env ZDOTDIR=${HOME}/.config/zsh
 # map kitty_mod+equal  change_font_size all +2.0
 # map kitty_mod+plus   change_font_size all +2.0
 # map kitty_mod+kp_add change_font_size all +2.0
-# map cmd+plus         change_font_size all +2.0
-# map cmd+equal        change_font_size all +2.0
+map ctrl+equal        change_font_size all +2.0
 # map shift+cmd+equal  change_font_size all +2.0
 
 #: Decrease font size
 
 # map kitty_mod+minus       change_font_size all -2.0
 # map kitty_mod+kp_subtract change_font_size all -2.0
-# map cmd+minus             change_font_size all -2.0
+map ctrl+minus             change_font_size all -2.0
 # map shift+cmd+minus       change_font_size all -2.0
 
 #: Reset font size
