--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,7 +10,6 @@ bind C-Space send-prefix
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-#set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 #settings
@@ -18,7 +17,6 @@ set -g status-position top
 set -g base-index 1
 setw -g mode-keys vi
 set-option -g default-shell /bin/zsh
-set-option -g @yank-to-clipboard "xclip -selection clipboard"  # for xclip and yank
 
 #bindings
 bind-key r source-file ~/.config/tmux/tmux.conf \; display-message "tmux.conf reloaded."
@@ -29,7 +27,12 @@ bind-key -T prefix h command-prompt -k -p key { list-keys -1N "%%" }
 bind l next-window
 bind c new-window -c "#{pane_current_path}"
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -selection clipboard' #copy to clipboard
-bind-key -Tcopy-mode-vi 'C-v' send -X rectangle-toggle
+bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
+
+bind -r j resize-pane -L 5
+bind -r k resize-pane -R 5
+bind -r h resize-pane -L 10
+bind -r l resize-pane -R 10
 
 # Base configuration
 set -g status on
