--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,11 +28,13 @@ bind l next-window
 bind c new-window -c "#{pane_current_path}"
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -selection clipboard' #copy to clipboard
 bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
+bind t display-popup -E "tm"
 
-bind -r j resize-pane -L 5
-bind -r k resize-pane -R 5
-bind -r h resize-pane -L 10
-bind -r l resize-pane -R 10
+#pane resize
+bind -r j resize-pane -L 10
+bind -r k resize-pane -R 10
+bind -r h resize-pane -L 20
+bind -r l resize-pane -R 20
 
 # Base configuration
 set -g status on
