--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,10 +31,10 @@ bind-key -T copy-mode-vi 'C-v' send -X rectangle-toggle
 bind t display-popup -E "tm"
 
 #pane resize
-bind -r j resize-pane -L 10
-bind -r k resize-pane -R 10
-bind -r h resize-pane -L 20
-bind -r l resize-pane -R 20
+bind -r j resize-pane -L 16
+bind -r k resize-pane -R 16
+bind -r h resize-pane -D 1
+bind -r l resize-pane -U 1
 
 # Base configuration
 set -g status on
